# Compact-Wireless-Strain-Sensor-System-for-Long--Term-Monitoring-for-Offshore-Wind-Turbines

./: Fullcontrol_Serpentine_Sensor.ipynb  README.md  shm.yaml
Custom_PCB_V3/: Custom_PCB_V3.pintool  Custom_PCB_V3.slcp  Custom_PCB_V3.slps  app.c  claude_code_explain_project.md  claude_code_explain_project_QA.md  em4.c  em4.h  main.c  vscode.conf  wheatstone.c  wheatstone.h  zigbee.c  zigbee.h
Custom_PCB_V3/autogen/: gen.properties  linkerfile.ld  sl_cluster_service_gen.c  sl_cluster_service_gen.h  sl_component_catalog.h  sl_event_handler.c  sl_event_handler.h  sl_power_manager_handler.c  sl_rail_util_ieee802154_phy_select.c  sl_rail_util_ieee802154_stack_event.c  sli_mbedtls_config_autogen.h  sli_psa_config_autogen.h  zap-cli.c  zap-config.h  zap-enabled-incoming-commands.h  zap-event.c  zap-event.h  zap-print.h  zigbee_af_cluster_functions.h  zigbee_af_token_headers.h  zigbee_common_callback_dispatcher.c  zigbee_common_callback_dispatcher.h  zigbee_stack_callback_dispatcher.c  (+3 more)
Custom_PCB_V3/cmake_gcc/: CMakeLists.txt  CMakePresets.json  Custom_PCB_V3.cmake  Custom_PCB_V3_project.cmake  toolchain.cmake
Overleaf/: 01_Conclusion.tex  01_Discussion.tex  01_System_overview.tex  05_Encapsulation.tex  2by2_drift.tex  CR-tikz.tex  Firmware_Implementation.tex  Firmware_architecture_overview.tex  FullSystem_neg_deg_ADC_latex.csv  FullSystem_neg_deg_ADCogVout.tex  FullSystem_neg_deg_Vout_latex.csv  FullSystem_neg_deg_cc_sleep.tex  FullSystem_neg_deg_temp_latex.csv  MCU_Pinout_tikz.tex  MCU_Pinout_tikz2.tex  Manufacturing_Cost.tex  Meas_Reap_Sleep.tex  Meas_Reap_Sleep2.tex  PCB5_current_consumption_2_latex.csv  PLA_efter_neg_deg.tex  PLAvsTPU.csv  Results.tex  Safety.tex  Sawtooth_baseline_latex.csv  SlowStrain_drift_ADC_latex.csv  SlowStrain_slope_drift_kun_Vout.tex  SlowStrain_slope_stable_latex.csv  SlowStrain_slope_varying_drift_latex.csv  SlowStrain_steps.tex  SlowStrain_steps_uncontrolled.tex  TPU_optimized_sensors.tex  TPUsub_TPU_latex.csv  TPUvsPLA_neg_deg.tex  Wheatstone.tex  WheatstoneBasic_ohm.csv  WheatstoneBasic_volt2.csv  WheatstoneSensor_resistance2.tex  bibliography.bib  main.tex  sensorEncapsulation.tex  (+1 more)
Overlearf/: main.tex
(+211 files in other folders)
